# acitx-test

./: Cargo.toml  README.md
src/: main.rs
src/config/: mod.rs  rbatis_config.rs
src/result/: ajax_result.rs  mod.rs
src/user/: mod.rs  model.rs  user_controller.rs  user_service.rs
